<resources>
    <string name="app_name">ZOHO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="text_or">Sign In using</string>
    <string name="developed_by">Developed By:</string>
    <string name="selected_language">العربية</string>
    <string name="invalid_credential">Invalid User Credential!</string>
    <string name="task_incomplete">Please set progress 100% to mark as done </string>
    <string name="feeds">Feeds</string>
    <string name="activity">Activities</string>
    <string name="tasks">Tasks</string>
    <string name="documents">Documents</string>
    <string name="settings">Settings</string>
    <string name="task_detail">Task Detail</string>
    <string name="sub_tasks">Sub Tasks</string>
    <string name="task_attachments">Task Attachments</string>
    <string name="attachments">Attachments</string>
    <string name="add_attachments">Add Attachments</string>
    <string name="Task_Title">Task Title</string>
    <string name="add_documents">Add Documents</string>
    <string name="document_preview">Document Preview</string>
    <string name="dashboard">Dashboard</string>
    <string name="forums">Forums</string>
    <string name="star_rating">Star Rating</string>
    <string name="departments">Departments</string>
    <string name="task_title">Task title:</string>
    <string name="task_overview">Task Overview:</string>
    <string name="task_category">Task Category:</string>
    <string name="task_attachment">Attachment:</string>
    <string name="task_employees">Employees:</string>
    <string name="task_schedule">Schedule:</string>
    <string name="task_priority">Priority:</string>
    <string name="priority">Priority</string>
    <string name="image">Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="google_drive">Google Drive</string>
    <string name="drop_box">Drop Box</string>
    <string name="others">Others</string>
    <string name="OK">OK</string>
    <string name="none">None</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="file_size">File Size Alert!</string>
    <string name="file_size_content">File size should be less than five(5) MB</string>
    <string name="task_desc">Description</string>
    <string name="category">Category</string>
    <string name="category_">Category:</string>
    <string name="employees">Users</string>
    <string name="assigned_projects">Assigned Projects</string>
    <string name="TaskListName">TaskList Name</string>
    <string name="users">Users</string>
    <string name="schedule">Schedule</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="general">General</string>
    <string name="lang_arabic">ar</string>
    <string name="lang_english">en</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">Calendar</string>
    <string name="task_comment">Comment(s)</string>
    <string name="task_user">User(s)</string>
    <string name="user">User</string>
    <string name="n_a">N/A</string>
    <string name="add_user">Add New User</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="rest_password">Reset Password</string>
    <string name="edit_user">Edit User</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="all">All</string>
    <string name="upcoming">Upcoming</string>
    <string name="overdue">Overdue</string>
    <string name="title_activity_milestone">MilestoneActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="new_forum_post">New Forum Post</string>
    <string name="new_dept">New Department</string>
    <string name="edit_forum_post">Edit Forum Post</string>
    <string name="new_project">Add New Project</string>
    <string name="edit_project">Edit Project</string>
    <string name="edit_dept">Edit Department</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="delete_comment">DeleteComment?</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="projects">Projects</string>
    <string name="project_title">Project Title</string>
    <string name="forums_description">Forums Description</string>
    <string name="forums_title">Test Forum</string>
    <string name="title">Title</string>
    <string name="content">Contents</string>
    <string name="reopen">Reopen Task?</string>
    <string name="reopen_task">Reopen Task</string>
    <string name="mark_as_done">Mark as done?</string>
    <string name="task_as_done">Mark as done</string>
    <string name="closed_tasks">Closed Tasks</string>
    <string name="closed_taskslists">Closed Taskslist</string>
    <string name="closed_milestone">Closed Milestone</string>
    <string name="opened_tasks">Open Tasks  </string>
    <string name="opened_milestone">Open Milestone</string>
    <string name="opened_taskslist">Open Taskslist</string>
    <string name="tasks_list">Tasks List</string>
    <string name="milestones">Milestones</string>
    <string name="task_done">Task done</string>
    <string name="task_created">Task Created/Updated Successfully</string>
    <string name="delete_task">Delete Task?</string>
    <string name="task_deleted">Task Deleted</string>
    <string name="update_progress">Progress Updated</string>
    <string name="update_comment">Comment Updated</string>
    <string name="task_name">Task Name</string>
    <string name="task_details">Task Details</string>
    <string name="task_added">Added</string>
    <string name="task_users">Users:</string>
    <string name="project_status">Task Status:</string>
    <string name="task_startdate">Start Date:</string>
    <string name="task_duedate">Due Date:</string>
    <string name="projects_list_empty">Project list is empty</string>
    <string name="forums_list_empty">Project list is empty</string>
    <string name="comments_added">Comment Added</string>
    <string name="uploaded_succesful">File(s) uploaded successfully</string>
    <string name="delete_doc">Delete Document?</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="doc_deleted">Document Deleted</string>
    <string name="_private">Private - Only project users can access</string>
    <string name="_active">Active</string>
    <string name="send_comments">Send a comment</string>
    <string name="_public">Public - Portal users can view/follow</string>
    <string name="_archive">Archive</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Project Description</string>
    <string name="project_access">Project Access</string>
    <string name="remember_password">Remember Password?</string>
    <string name="over_due">Over Due</string>
    <string name="up_coming">Up Coming</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_role">User Role</string>
    <string name="user_roles">User Roles</string>
    <string name="select_folder">Select Folder</string>
    <string name="logout">Logout</string>
    <string name="change_theme">Change Theme</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ratingPrimaryStage">Primary Stage</string>
    <string name="ratingDevelopmentStage">Development Stage</string>
    <string name="ratingMaturityStage">Maturity Stage</string>
    <string name="ratingLeadingStage">Leading Stage</string>
    <string name="Q">Q</string>
    <string name="department_created">Department Created</string>
    <string name="department_updated">Department Updated</string>
    <string name="department_deleted">Department Deleted</string>
    <string name="deleted_dept">Delete Department?</string>
    <string name="department_name">Please Add Department Name</string>
    <string name="forum_created">Forum Created</string>
    <string name="forum_updated">Forum Updated</string>
    <string name="forum_deleted">Forum Deleted</string>
    <string name="deleted_forum">Delete Forum?</string>
    <string name="forum_addname">Please Add Forum Name</string>
    <string name="forum_add_description">Please Add Forum Description</string>
    <string name="project_created">Project Created</string>
    <string name="project_moved">Project Moved Successfully</string>
    <string name="project_updated">Project Updated</string>
    <string name="project_deleted">Project Deleted</string>
    <string name="deleted_project">Delete Project?</string>
    <string name="project_loading">Please wait for the loading</string>
    <string name="all_projects">All Projects</string>
    <string name="by_client">By Client</string>
    <string name="by_dept">By Department</string>
    <string name="un_assigned">Unassigned Projects</string>
    <string name="project_addname">Please Add Project Name</string>
    <string name="project_add_description">Please Add Project Description</string>
    <string name="project_access_option">Please Select The Project Access</string>
    <string name="dept_name">Department Name</string>
    <string name="privacy">Privacy Policy</string>
    <string name="cancel">Cancel</string>
</resources>