<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBaseWrapper"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/project_name"
            android:textSize="18sp"
            app:met_floatingLabel="normal"
            app:met_primaryColor="@color/colorBaseHeader"
            app:met_singleLineEllipsis="true" />

        <Spinner
            android:id="@+id/owner_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/project_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/project_description"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            app:met_floatingLabel="normal"
            app:met_primaryColor="@color/colorBaseHeader" />

        <Spinner
            android:id="@+id/departments_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <RadioGroup
            android:id="@+id/project_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/active_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_active"
                android:textColor="@color/colorBaseHeader" />

            <RadioButton
                android:id="@+id/archive_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_archive"
                android:textColor="@color/colorBaseHeader" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/project_access"
            android:textColor="@color/colorBaseHeader"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/private_public_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/private_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_private"
                android:textColor="@color/colorBaseHeader" />

            <RadioButton
                android:id="@+id/public_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_public"
                android:textColor="@color/colorBaseHeader" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>