<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBaseWrapper">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView
            android:id="@+id/shadow_item_container"
            android:layout_width="match_parent"
            style="@style/ms9_DefaultShadowStyle"
            android:layout_height="wrap_content"
            app:ms9_useAmbientShadow="true"
            app:ms9_affectsDisplayedPosition="true"
            app:ms9_shadowTranslationZ="1dp"
            app:ms9_shadowElevation="3dp">
            <RelativeLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="2dp"
                android:background="?attr/color_line"
                android:layout_width="match_parent">
                <TextView
                    android:id="@+id/lblListHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/new_project"
                    android:textColor="@color/white"
                    android:gravity="center" />
            </RelativeLayout>
        </com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_margin="10dp"
            android:layout_below="@+id/shadow_item_container"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="4dp">
            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/project_name"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/project_name"
                    android:ellipsize="end"
                    android:textColor="?attr/color_line"
                    android:textColorHint="?attr/hint_color"
                    android:background="?attr/round_border"
                    android:singleLine="true"
                    android:layout_marginTop="15dp" />
                <EditText
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:id="@+id/owner_list"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:editable="false"
                    android:textColor="?attr/color_line"
                    android:textColorHint="?attr/hint_color"
                    android:background="?attr/round_border"
                    android:imeOptions="actionNext"
                    android:hint="@string/users"
                    android:layout_below="@+id/project_name"
                    android:textSize="18sp" />
                <EditText
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/project_desc"
                    android:textSize="18sp"
                    android:layout_below="@+id/owner_list"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:hint="@string/project_description"
                    android:inputType="textMultiLine"
                    android:gravity="top|left"
                    android:layout_marginTop="10dp"
                    android:textColor="?attr/color_line"
                    android:textColorHint="?attr/hint_color"
                    android:background="?attr/round_border" />
                <EditText
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:id="@+id/departments_list"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:editable="false"
                    android:textColor="?attr/color_line"
                    android:textColorHint="?attr/hint_color"
                    android:background="?attr/round_border"
                    android:imeOptions="actionNext"
                    android:hint="@string/dept_name"
                    android:layout_below="@+id/project_desc"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/project_access"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project_access"
                    android:paddingTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:layout_below="@id/departments_list"/>

                <RadioGroup
                    android:id="@+id/private_public_group"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/project_access"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <RadioButton
                        android:id="@+id/private_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_private"
                        android:button="@null"
                        android:drawablePadding="5dp"
                        android:background="@color/light_gray"
                        android:drawableStart="@drawable/radiobutton"
                        android:drawableLeft="@drawable/radiobutton" />
                    <RadioButton
                        android:id="@+id/public_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/light_gray"
                        android:layout_marginTop="5dp"
                        android:drawablePadding="5dp"
                        android:text="@string/_public"
                        android:button="@null"
                        android:drawableStart="@drawable/radiobutton"
                        android:drawableLeft="@drawable/radiobutton" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/active_archive_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_below="@id/private_public_group"
                    android:layout_marginTop="10dp">

                    <RadioButton
                        android:id="@+id/active_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_active"
                        android:background="@color/light_gray"
                        android:button="@null"
                        android:drawableStart="@drawable/radiobutton"
                        android:drawableLeft="@drawable/radiobutton"/>
                    <RadioButton
                        android:id="@+id/archive_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_archive"
                        android:layout_marginTop="5dp"
                        android:background="@color/light_gray"
                        android:button="@null"
                        android:drawableStart="@drawable/radiobutton"
                        android:drawableLeft="@drawable/radiobutton"/>
                </RadioGroup>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>