<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.algorepublic.zoho.utils.DropDownLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/id8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="4dp"
                android:outlineProvider="bounds"
                >
                <RelativeLayout
                    android:id="@+id/checkbox_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginTop="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:layout_marginBottom="3dp"
                        android:drawableRight="@drawable/right_arrow"
                        android:textSize="18sp"
                        android:text="@string/change_theme" />
                </RelativeLayout>
            </LinearLayout>
    </com.algorepublic.zoho.utils.DropDownLayout>
    <TextView
        android:id="@+id/edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="3dp"
        android:drawableRight="@drawable/right_arrow"
        android:background="@color/white"
        android:elegantTextHeight="true"
        android:elevation="5dp"
        android:textStyle="bold"
        android:textSize="18sp"

        android:text="@string/edit_profile" />
    <TextView
        android:id="@+id/rest_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="3dp"
        android:background="@color/white"
        android:elegantTextHeight="true"
        android:elevation="5dp"
        android:drawableRight="@drawable/right_arrow"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/rest_password" />
    <TextView
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="3dp"
        android:background="@color/white"
        android:elegantTextHeight="true"
        android:elevation="5dp"
        android:drawableRight="@drawable/right_arrow"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/privacy" />
    <TextView
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="3dp"
        android:background="@color/white"
        android:elegantTextHeight="true"
        android:elevation="5dp"
        android:textStyle="bold"
        android:drawableRight="@drawable/right_arrow"
        android:textSize="18sp"
        android:text="@string/rest_password" />
    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:background="@color/white"
        android:elegantTextHeight="true"
        android:elevation="3dp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="3dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        android:text="@string/logout" />

</LinearLayout>
