<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBaseWrapper"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/underline_textview_black"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/documents"
            android:textSize="14sp"
            android:typeface="monospace" />

        <EditText
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/round_border_black"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:id="@+id/folder_list"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:editable="false"
            android:textColor="@color/colorBaseHeader"
            android:textColorHint="@color/colorBaseMenu"
            android:imeOptions="actionNext"
            android:hint="@string/select_folder"
            android:layout_below="@+id/user_phoneno"
            android:textSize="18sp" />

        <Button
            android:id="@+id/add_file"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/add_documents"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@color/colorBaseWrapper"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>