<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout1"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView
        android:id="@+id/shadow_item_container"
        android:layout_width="match_parent"
        style="@style/ms9_DefaultShadowStyle"
        android:layout_height="wrap_content"
        app:ms9_useAmbientShadow="true"
        app:ms9_affectsDisplayedPosition="true"
        app:ms9_shadowTranslationZ="1dp"
        app:ms9_shadowElevation="3dp">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorContentWrapper"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/lblListHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/new_dept"
                android:gravity="center"
                android:textColor="@color/white" />
        </RelativeLayout>
    </com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_margin="10dp"
        android:layout_below="@+id/shadow_item_container"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="4dp">
        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <EditText
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/round_border_black"
                android:singleLine="true"
                android:ellipsize="end"
                android:id="@+id/dept_title"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/new_dept"
                android:inputType="textMultiLine"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorBaseHeader"
                android:textColorHint="@color/colorBaseMenu"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:id="@+id/separator"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/card_view"
        />
    <TableRow

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator"
        android:weightSum="100"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/cancel"
            android:background="@color/colorWhite"
            android:padding="15dp"
            android:id="@+id/btnCancel" />
        <View android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/light_gray"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:padding="15dp"
            android:text="@string/save"
            android:background="@color/colorWhite"
            android:id="@+id/btnSave" />


    </TableRow>
</RelativeLayout>
